# static_folders

./: CHANGELOG.md  RELEASING.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  publish_to_pypi.yml
src/static_folders/: __init__.py  folder.py  folder_interface.py  partitioned_folder.py
test/: test_basic.py
