[project]
name = "static-folders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt Richards", email = "mrichards7@outlook.com.au" }
]
requires-python = ">=3.7"
dependencies = [
    "attrs>=24.2.0",
    "typing-extensions>=4.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pytest>=7.4.4",
    "ruff>=0.11.2",
]
